@@ -1,3 +1,8 @@
+NEXT RELEASE
+ - Added requires attribute to o.Trait so that traits can declare a
+   base-line interface that they require to be installed onto an
+   object.
+
 0.0.8 : 2014-01-03
  - In addition to accepting an Array, o.DuckType now accepts an Object,
    allowing for type checking.
